<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:background="@color/backgrounds"
    android:paddingRight="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center_horizontal"
            android:text="Patient Check"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="36sp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView"
            android:layout_gravity="center"
            android:src="@drawable/blank_picture"
            android:layout_width="200dp"
            android:layout_height="200dp" />


        <EditText
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="4dp"
            android:id="@+id/nameField"
            android:hint="@string/name_field_prompt"
            android:textColorHint="@color/grey"
            android:textColor="@color/text_dark"
            android:background="@color/white"
            android:paddingLeft="10dp"
            android:gravity="center_vertical"
            android:inputType="text"/>



        <EditText
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="4dp"
            android:id="@+id/dniField"
            android:hint="@string/dni_field_prompt"
            android:textColorHint="@color/grey"
            android:textColor="@color/text_dark"
            android:background="@color/white"
            android:paddingLeft="10dp"
            android:gravity="center_vertical"
            android:inputType="number"/>


        <EditText
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="4dp"
            android:id="@+id/emailField"
            android:gravity="center_vertical"
            android:textColor="@color/text_dark"
            android:background="@color/white"
            android:paddingLeft="10dp"
            android:hint="@string/email_field_prompt"
            android:textColorHint="@color/grey"
            android:inputType="text"/>



        <EditText
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="4dp"
            android:id="@+id/passwordField"
            android:gravity="center_vertical"
            android:background="@color/white"
            android:paddingLeft="10dp"
            android:hint="@string/password_field_prompt"
            android:textColorHint="@color/grey"
            android:textColor="@color/text_dark"
            android:password="true"
            android:inputType="text"/>


        <Button
            android:id="@+id/registerButton"
            android:layout_marginTop="14dp"
            android:layout_width="180dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/botonesVerdes"
            android:textColor="@color/white"
            android:text="@string/register_text"
            />

    </LinearLayout>

</ScrollView>