<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:background="@color/backgrounds"
    android:paddingRight="16dp">

    <ScrollView
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center_horizontal"
            android:text="Patient Check"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="36sp" />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:minHeight="48dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_compass"
                android:layout_marginRight="4dp"
                android:contentDescription="@string/warning_icon_description"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/password_recovered_message"
                android:textSize="20dp"
                android:layout_marginLeft="4dp"/>
        </LinearLayout>

        <Button
            android:id="@+id/bkndlsLoginButton"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:background="#6cc170"
            android:textColor="@color/white"
            android:text="@string/btn_LoginBackendless"
            />

    </ScrollView>

</ScrollView>