<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_with_backendless"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#455b72"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-black"
            android:text="Patient Check"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="50dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center">


            <Button
                android:id="@+id/BluetoothBtn"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="25dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/grey"
                android:textColor="@color/white"
                android:text="@string/btn_Bluetooth"
                />

            <Button
                android:id="@+id/AlertasBtn"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/btn_Alertas"
                android:background="@color/grey"
                android:textColor="@color/white"
                />

            <Button
                android:id="@+id/UbicacionBtn"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/btn_Ubicacion"
                android:background="@color/grey"
                android:textColor="@color/white"
                />


        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
